[package]
name = "sssf"
version = "0.1.0"
authors = ["Arkadiusz Żyłkowski <arkadiuszzylkowski@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/zylkowski/sssf"
documentation = "https://docs.rs/sssf"
description = """
Super simple simulation framework.
"""
keywords = ["simulation"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"

